--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,91 @@
 body {
-    background-color: #f9f7fe;
-    font-family: "Lexend", sans-serif;
+  background-color: #d7f2a6a3;
+  font-family: "Lexend", sans-serif;
 }
 .weather-app {
-    background: white;
-    max-width: 600px;
-    margin: 45px auto;
-   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
-    padding: 30px;
-    border-radius: 16px;
+  background: #f1eee9;
+  max-width: 600px;
+  margin: 45px auto;
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+  padding: 30px;
+  border-radius: 16px;
+}
+a {
+  color: #a0bdef;
+  font-style: normal;
+}
+
+header {
+  border-bottom: 1px solid #f9f7fe;
+  padding: 0 0 30px 0;
+}
+
+.search-form-input {
+  background-color: #f9f7fe;
+  border: none;
+  border-radius: 6px;
+  width: 78%;
+  padding: 15px 20px;
+  font-size: 16px;
+}
+
+.search-form-button {
+  background: #a0bdef;
+  padding: 15px 30px;
+  border: none;
+  font-size: 16px;
+  margin-left: 5px;
+  border-radius: 6px;
+  color: white;
+}
+main {
+  padding: 30px 0;
+}
+.weather-app-data {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30p;
+}
+.weather-app-city {
+  margin: 0;
+  font-size: 50px;
+  line-height: 48px;
+  color: #192607;
+}
+
+.weather-app-details {
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.6);
+  line-height: 20px;
+}
+
+.weather-app-details strong {
+  color: #a0bdef;
+}
+.weather-app-temperature-container {
+  display: flex;
+}
+.weather-app-temperature {
+  font-size: 95px;
+  color: #192607;
+}
+
+.weather-app-icon {
+  font-size: 80px;
+  margin-top: 16px;
+  color: #192607;
+}
+
+.weather-app-unit {
+  margin-top: 20px;
+  font-weight: 600;
+  color: #192607;
+}
+footer {
+  border-top: 1px solid #f9f7fe;
+  padding: 25px 0 0 0;
+  text-align: center;
+  font-size: 13.5px;
+  color: rgba(0, 0, 0, 0.6);
+  font-style: oblique;
 }
