Injected the icon functiont in JS  and adjusted some CSS proportions

--- a/src/styles.css
+++ b/src/styles.css
@@ -41,11 +41,12 @@ header {
 main {
   padding: 30px 0;
 }
+
 .weather-app-data {
   display: flex;
   justify-content: space-between;
-  margin-top: 30p;
 }
+
 .weather-app-city {
   margin: 0;
   font-size: 50px;
@@ -56,28 +57,28 @@ main {
 .weather-app-details {
   font-size: 16px;
   color: rgba(0, 0, 0, 0.6);
-  line-height: 20px;
+  line-height: 24px;
 }
 
 .weather-app-details strong {
   color: #a0bdef;
 }
+
 .weather-app-temperature-container {
   display: flex;
 }
-.weather-app-temperature {
-  font-size: 95px;
-  color: #192607;
-}
-
 .weather-app-icon {
+  width: 70px;
+ height: 70px;
+}
+.weather-app-temperature {
   font-size: 80px;
-  margin-top: 16px;
   color: #192607;
+  line-height: 88px;
 }
 
 .weather-app-unit {
-  margin-top: 20px;
+  margin-top: 15px;
   font-weight: 600;
   color: #192607;
 }
