--- a/src/styles.css
+++ b/src/styles.css
@@ -2,17 +2,20 @@ body {
   background-color: #d7f2a6a3;
   font-family: "Lexend", sans-serif;
 }
+
+a {
+  color: #a0bdef;
+  font-style: normal;
+}
+
 .weather-app {
   background: #f1eee9;
-  max-width: 600px;
+  max-width: 500px;
+  min-width: 500px;
   margin: 45px auto;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   padding: 30px;
   border-radius: 16px;
-}
-a {
-  color: #a0bdef;
-  font-style: normal;
 }
 
 header {
@@ -24,7 +27,7 @@ header {
   background-color: #f9f7fe;
   border: none;
   border-radius: 6px;
-  width: 78%;
+  width: 75%;
   padding: 15px 20px;
   font-size: 16px;
 }
@@ -68,33 +71,58 @@ main {
 .weather-app-temperature-container {
   display: flex;
 }
+
+.weather-app-icon {
+  width: 70px;
+  height: 70px;
+}
+
 .weather-app-temperature {
   font-size: 80px;
   color: #192607;
   line-height: 88px;
 }
-.weather-app-icon {
-  width: 70px;
-  height: 70px;
-}
+
 .weather-app-unit {
   margin-top: 15px;
   font-weight: 600;
   color: #192607;
 }
+
 .weather-forecast {
-  margin-top: 20px;
-  text-align: center;
+  display: flex;
+  justify-content: space-around;
 }
+
 .weather-forecast-date {
+  text-align: center;
   font-size: 16px;
   color: rgb(0, 0, 0);
   font-weight: 600;
+  line-height:20px;
+  margin-bottom: 5px;
 }
-.weather-forecast-temperatures{
+
+.weather-forecast-icon {
+  font-size: 38px;
+  text-align: center;
+}
+
+.weather-forecast-temperatures {
   font-size: 12px;
   color: rgb(0, 0, 0);
+   text-align: center;
+   justify-content: center;
+   margin-top: 5px;
+   margin-bottom: 30px;
+   display: flex;
+
 }
+
+.weather-forecast-temperature {
+  padding: 0 5px;
+}
+
 .weather-forecast-temperature-minimum {
   color: rgba(0, 0, 0, 0.5);
 }
