--- a/src/styles.css
+++ b/src/styles.css
@@ -97,7 +97,7 @@ main {
 .weather-forecast-date {
   text-align: center;
   font-size: 16px;
-  color: rgb(0, 0, 0);
+  color: #192607;
   font-weight: 600;
   line-height:20px;
   margin-bottom: 5px;
@@ -131,7 +131,7 @@ footer {
   border-top: 1px solid #f9f7fe;
   padding: 25px 0 0 0;
   text-align: center;
-  font-size: 13.5px;
+  font-size: 11px;
   color: rgba(0, 0, 0, 0.6);
   font-style: oblique;
 }
